Fix scrollbar

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -8,3 +8,8 @@
 
 // Import Feature styles
 @import '../../features/auth/components/AuthLayout/style.less';
+
+// Fix vertical scrollbar added by oaf-react-router
+#announcements {
+  position: fixed !important;
+}
